--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       font-family: Arial, serif;
     }
     div.green {
-      color:pink;
+      color:red;
     }
     p{
       font-size: 35;
@@ -42,11 +42,11 @@
   <h1 id="main-header">Refleksomierzacz</h1>
   <p>Liczba prób</p>
 
-  <input type="text" id="myTextField"  value="5">
+  <input type="text" id="attemptsValue"  value="5">
   <p><button type="button" onclick="startGame()" id="startButton" style="background-color:green" >START</p3></button></p>
 
 
-  <p><button  type="button" onclick="calculateTime()" id="reflexButton"><h2>Kliknij mnie</h2></button></p>
+  <p><button  type="button" onclick="calculateTime()" id="reflexButton"><h2>Kliknij START aby zacząć</h2></button></p>
   <p1>Panel statystyk</p1>
 
   <div id="myDIV">
@@ -64,13 +64,16 @@
 
   // szukanie po identyfikatorze
   const header = document.getElementById('main-header');
-  let bestResult;
-  let lastResult;
-  let averageResult;
+  let bestResult=999999999999;
+  let lastResult=0;
+  let averageResult=0;
   let T1;
   let T2;
-  let attempts = 3;
-  let actual;//="start";
+  let attemptValue = 0 //liczb prób określona przez użytkownika, standardowo 5 prób
+  let attempt=1
+  let sum=0;
+
+
 
   //document.getElementById("startStop").innerHTML = actual;
   function ChangeColor()
@@ -89,40 +92,63 @@
 
 
   function startGame(){
-    if(document.getElementById("startButton").innerHTML=="STOP"){
+    if(document.getElementById("startButton").innerHTML=="STOP"){ //jeśli STOP
       document.getElementById("startButton").innerHTML= "START";
       document.getElementById("startButton").style.backgroundColor = "green";
+      stopGame();
     }
-    else if(document.getElementById("startButton").innerHTML=="START"){
+    else if(document.getElementById("startButton").innerHTML=="START"){ //jeśli wciśniety przycisk START
+      document.getElementById("reflexButton").innerHTML= "<h2>Kliknij mnie gdy ZIELONE</h2>";
+      attemptValue = document.getElementById("attemptsValue").value;
+      console.log(attempt);
       document.getElementById("startButton").innerHTML= "STOP";
       document.getElementById("startButton").style.backgroundColor = "red";
     }
-
-    document.getElementById("bestResult").innerHTML = bestResult;
-    document.getElementById("lastResult").innerHTML = lastResult;
     document.getElementById("averageResult").innerHTML = averageResult;
     const button = document.getElementById("myButton");
-    timeCounter();
-
+    console.log(attempt);
+    setTimeout(()=>timeCounter(),2000);
   }
-  function stopGame(){
 
+  function stopGame(){
+    document.getElementById("startButton").innerHTML= "START";
+    document.getElementById("startButton").style.backgroundColor = "green";
+    document.getElementById("reflexButton").innerHTML= "<h2>KONIEC.Kliknij START by spróbować ponownie</h2>";
   }
   function timeCounter(){
-    console.log("timeCounter");
    const button = document.getElementById("reflexButton");
-    button.style.backgroundColor = "green";
+    button.innerHTML= "<h2>KLIKNIJ MNIE TERAZ</h2>";
+    button.style.backgroundColor = "green"
     const now = new Date()
     T1 = now.getTime()/1000;
+
   }
 
   function calculateTime(){
+    console.log(attempt);
+    if(document.getElementById("reflexButton").style.backgroundColor=="green"){
     const button = document.getElementById("reflexButton");
     button.style.backgroundColor = "yellow";
+    button.innerHTML= "<h2>Kliknij mnie gdy ZIELONE</h2>";
     const now = new Date()
     T2 = now.getTime()/1000;
-    bestResult=T2-T1;
-  }
+    let time=T2-T1;
+    if(time<=bestResult)bestResult=time;
+    if(time>lastResult)lastResult=time;
+      sum=sum+time;
+      averageResult=sum/(attempt);
+    document.getElementById("bestResult").innerHTML = bestResult;
+    document.getElementById("lastResult").innerHTML = lastResult;
+      document.getElementById("averageResult").innerHTML = averageResult;
+    attempt++;
+
+      if(attempt<=attemptValue){
+        setTimeout(()=>timeCounter(),1000);
+        console.log(attempt);
+      }
+      else stopGame();
+
+  }}
 
   function myFunction() {
     var x = document.getElementById("myDIV");
@@ -138,6 +164,9 @@
     const checkbox = document.getElementById('myCheckbox');
 
     if(checkbox.checked) {alert(odczyt.value)}
+
+
+
   }
 
 </script>
