--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <p>Liczba prób:</p>
 
   <input type="text" id="attemptsValue"  value="5">
-  <p><button type="button" onclick="startStopButton()" id="sSButton" style="background-color:green" >START</p3></button></p>
+  <p><button type="button" onclick="startStopButton()" id="sSButton" style="background-color:green" >START</button></p>
 
 
   <p><button  type="button" onclick="calculateTime()" id="reflexButton"><h2>Kliknij START aby zacząć</h2></button></p>
